Unread issues not visible on click

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -721,6 +721,7 @@ table tr.table-header {
 
 .viewed {
     color: #888888;
+    display: none;
 }
 
 .box-title > h4 {
